# openworkers-runtime

./: Cargo.toml  README.md  build.rs
.devcontainer/: devcontainer.json
benches/: generic_benchmark.rs  request_body_benchmark.rs
examples/: benchmark.rs  scheduled.rs  serve-new.rs  serve-same.rs
src/: array_buffer_allocator.rs  cpu_enforcement.rs  cpu_timer.rs  http_types.rs  lib.rs  runtime.rs  snapshot.rs  termination.rs  timeout.rs  util.rs
src/ext/: event_fetch.js  event_fetch.rs  event_scheduled.rs  mod.rs  noop.rs  permissions.rs  runtime.rs
src/security/: array_buffer_allocator.rs  cpu_enforcer.rs  cpu_timer.rs  mod.rs  timeout_guard.rs
tests/: README.md  fetch_proxy_test.rs  generic_tests.rs  resource_limits.rs  streaming_test.rs  timeout_test.rs
