[package]
name = "openworkers-runtime"
version = "0.1.10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.9.0", features = ["serde"] }
deno_console = "0.186.0"
deno_core = "0.330.0"
deno_crypto = "0.200.0"
deno_error = "0.5.3"
deno_fetch = "0.210.0"
deno_permissions = "0.45.0"
deno_url = "0.186.0"
deno_web = "0.217.0"
deno_webidl = "0.186.0"
env_logger = "0.11.6"
http_v02 = { package = "http", version = "0.2.12" }
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }

# For CPU time measurement and enforcement (Unix-only)
libc = "0.2"
once_cell = "1.20"

[dev-dependencies]
actix-web = { version = "4.9.0", features = ["macros"] }

# https://doc.rust-lang.org/cargo/reference/profiles.html
# https://github.com/johnthagen/min-sized-rust?tab=readme-ov-file#minimizing-rust-binary-size
[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
incremental = true # Enable incremental compilation.
codegen-units = 1 # Use a single codegen unit to optimize for size.
lto = true # Enable link-time optimization.
