[package]
name = "openworkers-runtime-deno"
version = "0.5.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
actix = ["dep:actix-web", "openworkers-core/actix"]

[dependencies]

# Common types
# openworkers-core = { path = "../openworkers-core", features = ["deno", "testing"] }
openworkers-core = { git = "https://github.com/openworkers/openworkers-core", tag = "v0.5.0", features = ["deno", "testing"] }

bytes = { version = "1.11.0", features = ["serde"] }
deno_console = "0.221.0"
deno_core = "0.363.0"
deno_crypto = "0.234.0"
deno_fetch = "0.244.0"
deno_permissions = "0.79.0"
deno_url = "0.221.0"
deno_web = "0.251.0"
deno_webidl = "0.220.0"
env_logger = "0.11.8"
log = "0.4.28"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }

# For CPU time measurement and enforcement (Unix-only)
libc = "0.2"
once_cell = "1.21.3"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio-stream = "0.1"

# Optional dependencies for examples
actix-web = { version = "4.12.0", features = ["macros"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
futures = "0.3"

[[example]]
name = "serve-new"
required-features = ["actix"]

[[example]]
name = "serve-same"
required-features = ["actix"]

# https://doc.rust-lang.org/cargo/reference/profiles.html
# https://github.com/johnthagen/min-sized-rust?tab=readme-ov-file#minimizing-rust-binary-size
[dev-dependencies]
ntest = "0.9"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "request_body_benchmark"
harness = false

[[bench]]
name = "generic_benchmark"
harness = false

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
incremental = true # Enable incremental compilation.
codegen-units = 1 # Use a single codegen unit to optimize for size.
lto = true # Enable link-time optimization.
